@@ -34,7 +34,7 @@ long int initstop(char *name, char *parameters, struct CFmovement_struct *move_e
 int runstop(struct CFanimation_struct *animation, long int id, void *parameters);
 void prepare_commands(void);
 int equality_split(char *buffer, char **variable, char **value);
-int get_boolean(char *string, int *bool);
+int get_boolean(char *strg, int *bl);
 int is_animated_player(object *pl);
 void free_events(object *who);
 int start_animation(object *who, object *activator, char *file, char *options);
